Windup 2961 default tls (#11)
* Added tls-secret param and modified the way the tls ingress is created

* Modified test to not consider the https ingress if the secret is not defined

* Created v0.0.2 of the operator

* Fixed the number of objects expected on the e2e test ( not considering the https as we are not creating it bc there's no secret created )

* Added the replace to the CSV, fixed annotations in the Dockerfile for version, improved the script for the catalog to help test

* rollbacked changes on the 0.0.1 Dockerfile for operatorhub

* Improved steps to test the upgrade

* Copy a Secret and set that to Ingress
Add cluster permissions to Secrets for the operator

* Modified the creation of the Ingress to allow Default Cert on OCP Route creation

* As we are creating http and https ingresses , always, now the objects expected in the test are 19 again

* Fixed test expectancy

* Fixed typo in the csv

* replaced fixed version with "stable" tag on deployment yaml