@@ -7,6 +7,8 @@ import io.fabric8.kubernetes.api.model.OwnerReferenceBuilder;
 import io.fabric8.kubernetes.api.model.PersistentVolumeClaim;
 import io.fabric8.kubernetes.api.model.PersistentVolumeClaimBuilder;
 import io.fabric8.kubernetes.api.model.Quantity;
+import io.fabric8.kubernetes.api.model.Secret;
+import io.fabric8.kubernetes.api.model.SecretBuilder;
 import io.fabric8.kubernetes.api.model.Service;
 import io.fabric8.kubernetes.api.model.ServiceBuilder;
 import io.fabric8.kubernetes.api.model.VolumeBuilder;
@@ -15,6 +17,7 @@ import io.fabric8.kubernetes.api.model.apps.Deployment;
 import io.fabric8.kubernetes.api.model.apps.DeploymentBuilder;
 import io.fabric8.kubernetes.api.model.networking.v1beta1.Ingress;
 import io.fabric8.kubernetes.api.model.networking.v1beta1.IngressBuilder;
+import io.fabric8.kubernetes.api.model.networking.v1beta1.IngressTLS;
 import io.fabric8.kubernetes.api.model.networking.v1beta1.IngressTLSBuilder;
 import io.fabric8.kubernetes.client.KubernetesClient;
 import io.fabric8.kubernetes.client.KubernetesClientException;
@@ -27,6 +30,7 @@ import org.jboss.windup.operator.model.WindupResource;
 import org.jboss.windup.operator.model.WindupResourceDoneable;
 import org.jboss.windup.operator.model.WindupResourceList;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
@@ -227,6 +231,7 @@ private Map<String, String> getLabels() {
   }
 
   private List<Ingress> createIngresses() {
+    List<Ingress> ingresses = new ArrayList<>();
     String hostnameHttp = windupResource.getSpec().getHostname_http();
 
     // if the user doesn't provide hostname we'll try to discover it on Openshift
@@ -236,11 +241,11 @@ private Map<String, String> getLabels() {
       log.info("Cluster Domain : " + hostnameHttp);
     }
 
-    Ingress ingressWebConsoleHttps = createWebConsoleHttpsIngress(hostnameHttp);
+    log.info("Adding the 2 Ingresses ");
+    ingresses.add(createWebConsoleHttpsIngress(hostnameHttp));
+    ingresses.add(createWebConsoleHttpIngress(hostnameHttp));
 
-    Ingress ingressWebConsole = createWebConsoleHttpIngress(hostnameHttp);
-
-    return List.of(ingressWebConsoleHttps, ingressWebConsole);
+    return ingresses;
   }
 
   private Ingress createWebConsoleHttpIngress(String hostnameHttp) {
@@ -276,7 +281,15 @@ private Map<String, String> getLabels() {
     Ingress ingress = createWebConsoleHttpIngress(hostnameHttp);
     ingress.getMetadata().setName(ingressName);
     ingress.getMetadata().getAnnotations().remove("console.alpha.openshift.io/overview-app-route");
-    ingress.getSpec().setTls(Collections.singletonList(new IngressTLSBuilder().withHosts(hostHTTPS).build()));
+
+    IngressTLS ingressTLS = new IngressTLSBuilder().build();
+    // Only set the host and the secret if we receive a secret
+    // Otherwise an empty array for tls will allow OCP 4.6 to create a TLS Route with default cert
+    if (!StringUtils.isBlank(windupResource.getSpec().getTls_secret())) {
+      ingressTLS.setHosts(List.of(hostHTTPS));
+      ingressTLS.setSecretName(windupResource.getSpec().getTls_secret());
+    }
+    ingress.getSpec().setTls(Collections.singletonList(ingressTLS));
     ingress.getSpec().getRules().get(0).setHost(hostHTTPS);
 
     return ingress;
